BusOne/src/objects/Rep_Roster_vod__c.object
<CustomObject>
    <description>Roster of all Users for the organization.</description>
    <fields>
        <fullName>Address_Line_1_vod__c</fullName>
        <description>First Line of the Address for the Rep.  The First Line of the Address on Rep Roster is utilized for Transfer Transactions to auto-populate the First Line of the Address for a Transfer Sample Transaction based on the selected Transfer To User.</description>
        <label>Address Line 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2_vod__c</fullName>
        <description>Second line of the Address for the Rep.  The Second Line of the Address on Rep Roster is utilized for Transfer Transactions to auto-populate the Second Line of the Address for a Transfer Sample Transaction based on the selected Transfer To User.</description>
        <label>Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_vod__c</fullName>
        <description>City of the Address for the Rep.  The City of the Address on Rep Roster is utilized for Transfer Transactions to auto-populate the City of the Address for a Transfer Sample Transaction based on the selected Transfer To User.</description>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Computer_Asset_Tag__c</fullName>
        <description>Computer Asset Tag for the Rep.</description>
        <label>Computer Asset Tag</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax_Number__c</fullName>
        <description>Fax Number of the Rep.</description>
        <label>Fax Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <description>Home Phone Number for the Rep.</description>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Mobile_Number__c</fullName>
        <description>Mobile Number for the Rep.</description>
        <label>Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Organization_Id__c</fullName>
        <description>Organization Id for the Rep.</description>
        <label>Organization Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_vod__c</fullName>
        <description>State of the Address for the Rep.  The State of the Address on Rep Roster is utilized for Transfer Transactions to auto-populate the State of the Address for a Transfer Sample Transaction based on the selected Transfer To User.</description>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>FM</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>GU</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MH</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Territory_vod__c</fullName>
        <description>Comma-delimited list of Territories that Rep is assigned to.</description>
        <label>Territory</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Username_External_Id_vod__c</fullName>
        <description>Username of the Rep that acts as an external id to facilitate data loading of a Rep Roster.  The Username External Id must match the Username for the Rep within the User object.  This Username External Id is used by the Lookup on a Transfer Sample Transaction to auto-populate the address of the selected Transfer To User.</description>
        <externalId>true</externalId>
        <label>Username External Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>VIN__c</fullName>
        <description>VIN # of the car assigned to the Rep.</description>
        <label>VIN #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_vod__c</fullName>
        <description>Zip of the Address for the Rep.  The Zip of the Address on Rep Roster is utilized for Transfer Transactions to auto-populate the Zip of the Address for a Transfer Sample Transaction based on the selected Transfer To User.</description>
        <label>Zip</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <label>Rep Roster</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rep Roster</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>